scss/_footer.scss
footer {
	box-shadow: 0 0 1px 1px rgba(0,0,0,0.6);
	background: $lblack;
	margin-top: $super-gap;
	margin-bottom: $large-gap;
	border-top: 0.3rem solid $blue;
	border-bottom: 0.3rem solid $blue;
	.foot-wrap {
		width: 100%;
		color: $lblue;
		.recent-articles-footer,
		.footer-nav {
			padding: $large-gap;
			display: inline-block;
			float: left;
			.foot-widget-head {
				letter-spacing: 2px;
				z-index: 999;
				font-size: $font-med;
				color: $blue;
				background: $lblack;
				margin: $large-gap $small-gap;
				position: relative;
			}  /* .foot-widget-head */
			.foot-widget-link {
				font-weight: 300;
				margin: $small-gap;
				a {
					font-weight: 300;
					letter-spacing: 2px;
					word-spacing: 2px;
					margin: 3px 0;
					color: $white;
					font-size: .85rem;
					text-shadow: none;
					@include font-stack-brand;
					&:hover, &:focus {
						color: $lgreen;
						transition: 0.1s linear color;
					}  /* a:hover, a:focus */
				}  /* <a></a> */
			}  /* .foot-widget-link */
		}  /* .recent-articles-footer, .footer-nav */
		.footer-nav {
			padding-left: $super-gap;
		}  /* .footer-nav */
		.author {
			font-weight: 300;
			padding: $xxxlarge-gap $super-gap 0 0;
			.author-note {
				letter-spacing: 1px;
				line-height: 1.2;
				color: $white;
				padding: 0 0 $med-gap 0;
				font-size: $font-med;
				@include font-stack-brand;
				a {
					letter-spacing: 2px;
					color: $lgreen;
					@include font-stack-brand;
					&:hover, &:focus {
						color: $green;
						transition: 0.2s linear color;
					}  /* a:hover, a:focus */
				}  /* <a></a> */
			}  /* .author-note */
		}  /* .author */
	}  /* .foot-wrap */
}  /* <footer></footer> */

.connect-list {
	width: 90%;
	margin: $large-gap $none $none $none;
	display: block;
}  /* .connect-list */

.social-connection {
	width: 25%;
	display: inline-block;
	float: left;
	 .social-media-anchor {
	 	display: inline;
		.social-media-icon {
			margin: 0 25%;
		}  /* .social-media-icon */
		.facebook-icon:hover .outer-icon,
		.facebook-icon:focus .outer-icon {
			@include social-media-styles( $facebook );
		}  /* .facebook-icon:hover .outer-icon, .facebook-icon:focus .outer-icon */
		.twitter-icon:hover .outer-icon,
		.twitter-icon:focus .outer-icon {
			@include social-media-styles( $twitter );
		}  /* .twitter-icon:hover .outer-icon, .twitter-icon:focus .outer-icon */
		.linkedin-icon:hover .outer-icon,
		.linkedin-icon:focus .outer-icon {
			@include social-media-styles( $linkedin );
		}  /* .linkedin-icon:hover .outer-icon, .linkedin-icon:focus .outer-icon */
		.github-icon:hover .outer-icon,
		.github-icon:focus .outer-icon {
			@include social-media-styles( $github );
		}  /* .github-icon:hover .outer-icon, .github-icon:focus .outer-icon */
		.facebook-icon .outer-icon,
		.facebook-icon .outer-icon,
		.twitter-icon .outer-icon,
		.twitter-icon .outer-icon,
		.linkedin-icon .outer-icon,
		.linkedin-icon .outer-icon,
		.github-icon .outer-icon,
		.github-icon .outer-icon
		{
			fill: $dwhite;
			transition: fill 0.1s linear;
		}  /* .outer-icon */
	}  /* .social-media-anchor */
}  /* .social-connection */

.colophan {
	.copyright {
		padding: $large-gap $none;
		text-align: center;
		p {
			font-size: $font-med;
			color: $gray;
			@include font-stack-brand;
		}  /* <p></p> */
	}  /* copyright */
}  /* .colophan */

